[gd_scene load_steps=6 format=2]

[ext_resource path="res://estante_room_fase_2.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/Lost.S02E01.1080p.BluRay.x265-RARBG.mp4_snapshot_37.31_[2023.04.03_21.55.48].jpg" type="Texture" id=2]
[ext_resource path="res://pc_inside_fase_2.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 146.375, 109.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55.5, 26.5 )

[node name="estante_room_fase_2" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514, 299 )
scale = Vector2( 0.534375, 0.550926 )
texture = ExtResource( 2 )

[node name="pc_fase_2" type="Area2D" parent="."]

[node name="pc_col_shape" type="CollisionShape2D" parent="pc_fase_2"]
position = Vector2( 439, 249 )
shape = SubResource( 1 )

[node name="pc_inside_fase_2" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
margin_left = 7.0
margin_top = 706.0
margin_right = 7.0
margin_bottom = 739.0

[node name="bookshelf_room_arrow" type="Area2D" parent="."]
position = Vector2( 896, 337 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bookshelf_room_arrow"]
position = Vector2( 50.5, 20.5 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="pc_fase_2" to="." method="_on_pc_fase_2_mouse_entered"]
[connection signal="mouse_exited" from="pc_fase_2" to="." method="_on_pc_fase_2_mouse_exited"]
[connection signal="mouse_entered" from="bookshelf_room_arrow" to="." method="_on_bookshelf_room_arrow_mouse_entered"]
[connection signal="mouse_exited" from="bookshelf_room_arrow" to="." method="_on_bookshelf_room_arrow_mouse_exited"]
